# zt

./: .gitignore
FileTrasmmit/FileTrasmmition/app/: build.gradle
TempratureTest/: build.gradle
TempratureTest/app/: build.gradle
TempratureTest/gradle/wrapper/: gradle-wrapper.properties
Test/: build.gradle
Test/app/: build.gradle
Test/gradle/wrapper/: gradle-wrapper.properties
api/: AndroidManifest.xml  CMakeLists.txt  build.gradle  import-summary.txt  project.properties  settings.gradle
api/gradle/wrapper/: gradle-wrapper.properties
api/other/DaoCore/: AndroidManifest.xml  build.gradle
api/other/actionbarsherlock/: AndroidManifest.xml  build.gradle
api/other/pulltorefresh/: .project  build.gradle
api/other/slidingmenu/: build.gradle
api/other/xUtilslibrary/: build.gradle
api/res/drawable/: button_shape.xml  button_shape_normal.xml  button_shape_pressed.xml  shape.xml
api/res/drawable-xxhdpi/: levellist.xml  wifi_signal.xml
api/res/layout/: all.xml  arc_half.xml  capture.xml  device_config.xml  device_find_list.xml  fileselect_layout.xml  find_device_item.xml  float_layout.xml  fragment_arc.xml  fragment_bluetooth.xml  fragment_calculator.xml  fragment_camera.xml  fragment_color_adjust.xml  fragment_download.xml  fragment_dragsort.xml  fragment_http.xml  fragment_mnclick.xml  fragment_qrcode.xml  fragment_record.xml  fragment_speechrecognition.xml  (+22 more)
api/res/layout-land/: fragment_color_adjust.xml  fragment_stock2.xml  over_main.xml
api/src/main/jni/inject/: CMakeLists.txt  elfutils.cpp  elfutils.h  hook_funciton.h  hook_function.cpp  zj_zfenlly_gua_inject_LoadInjectLib.cpp  zj_zfenlly_gua_inject_LoadInjectLib.h
(+644 files in other folders)
